--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h1 {
   left: 50%;
   width: 40px;
   height: 40px;
-  background-color: #f5ec4c;
+  background-color: #fff200;
   border-radius: 50%;
   box-shadow: -10px 0 0 0 #2e3a59;
   transform: translate(-50%, -50%);
